[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://mods/ap7-dungeon/menus/setup/SetupMenu.gd" type="Script" id=2]
[ext_resource path="res://menus/menu_bg_fade.shader" type="Shader" id=3]
[ext_resource path="res://nodes/menus/InputMappedButton.gd" type="Script" id=4]
[ext_resource path="res://nodes/menus/AutoFocusConnector.gd" type="Script" id=5]
[ext_resource path="res://menus/FullWidthButtonPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/fonts/regular/regular_50.tres" type="DynamicFont" id=8]
[ext_resource path="res://nodes/menus/WidthLimitLineEdit.gd" type="Script" id=9]
[ext_resource path="res://ui/battle_theme.tres" type="Theme" id=10]
[ext_resource path="res://nodes/menus/RowFocusIndicator.tscn" type="PackedScene" id=11]
[ext_resource path="res://nodes/menus/ArrowOptionList.tscn" type="PackedScene" id=12]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/progress = 1.0
shader_param/max_alpha = 1.0
shader_param/base_color = Color( 0.1686, 0.1098, 0.2235, 1 )
shader_param/hi_color = Color( 0.6706, 0.4588, 0.9098, 0.0625 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 75.0
bg_color = Color( 0.670588, 0.458824, 0.909804, 1 )
corner_radius_top_right = 70
corner_detail = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1
shadow_offset = Vector2( -20, 20 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 1, 1, 1, 1 )
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1
shadow_offset = Vector2( -20, 20 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="BaseMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Blur" parent="." index="0"]
material = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Scroller/OverscanMarginContainer" index="0"]
margin_left = 172.0
margin_top = 97.0
margin_right = 1748.0
margin_bottom = 983.0
custom_constants/margin_right = 120

[node name="Vbox" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer" index="0"]
margin_left = 244.0
margin_top = 180.0
margin_right = 1211.0
margin_bottom = 706.0
rect_min_size = Vector2( 960, 0 )
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource( 10 )
custom_constants/separation = 0

[node name="HeadingPanel" type="PanelContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox" index="0"]
margin_right = 967.0
margin_bottom = 70.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/HeadingPanel" index="0"]
margin_left = 10.0
margin_right = 892.0
margin_bottom = 70.0
custom_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/HeadingPanel/HBoxContainer" index="0"]
margin_right = 882.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
text = "AP7_DUNGEON_DJINNMENU_TITLE"

[node name="MainInfoContainer" type="PanelContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox" index="1"]
margin_top = 70.0
margin_right = 967.0
margin_bottom = 526.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer" index="0"]
margin_top = 8.0
margin_right = 967.0
margin_bottom = 448.0

[node name="PanelContainer" type="PanelContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/HBoxContainer" index="0"]
margin_right = 967.0
margin_bottom = 440.0
size_flags_horizontal = 3

[node name="RowFocusIndicator" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/HBoxContainer/PanelContainer" index="0" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 4.0
margin_right = 961.0
margin_bottom = 4.0
container_path = NodePath("../../../VBoxContainer/Inputs")
hide_when_focus_lost = false

[node name="VBoxContainer" type="VBoxContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer" index="1"]
margin_top = 8.0
margin_right = 967.0
margin_bottom = 448.0

[node name="Inputs" type="GridContainer" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer" index="0"]
margin_right = 967.0
margin_bottom = 440.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2
script = ExtResource( 5 )
preserve_focus_index = true
focus_on_hover = true
handle_page_up = false
handle_page_down = false

[node name="LengthLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="0"]
margin_right = 651.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP7_DUNGEON_DJINNMENU_LENGTH_NAME"

[node name="LengthList" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="1" instance=ExtResource( 12 )]
margin_left = 667.0
margin_right = 967.0
margin_bottom = 60.0
values = [ "3x3", "4x3", "4x4", "4x5" ]
value_labels = [ "AP7_DUNGEON_DJINNMENU_LENGTH1", "AP7_DUNGEON_DJINNMENU_LENGTH2", "AP7_DUNGEON_DJINNMENU_LENGTH3", "AP7_DUNGEON_DJINNMENU_LENGTH4" ]

[node name="WildAreasLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="2"]
margin_top = 76.0
margin_right = 651.0
margin_bottom = 136.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP7_DUNGEON_DJINNMENU_AREAS_NAME"

[node name="WildAreasList" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="3" instance=ExtResource( 12 )]
margin_left = 667.0
margin_top = 76.0
margin_right = 967.0
margin_bottom = 136.0
values = [ false, true ]
value_labels = [ "AP7_DUNGEON_DJINNMENU_AREAS1", "AP7_DUNGEON_DJINNMENU_AREAS2" ]

[node name="EnemyScalingLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="4"]
margin_top = 152.0
margin_right = 651.0
margin_bottom = 212.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP7_DUNGEON_DJINNMENU_DIFFICULTY_NAME"

[node name="EnemyScalingList" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="5" instance=ExtResource( 12 )]
margin_left = 667.0
margin_top = 152.0
margin_right = 967.0
margin_bottom = 212.0
values = [ 1.0, 1.5, 2.0 ]
value_labels = [ "AP7_DUNGEON_DJINNMENU_DIFFICULTY1", "AP7_DUNGEON_DJINNMENU_DIFFICULTY2", "AP7_DUNGEON_DJINNMENU_DIFFICULTY3" ]

[node name="ExpScalingLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="6"]
margin_top = 228.0
margin_right = 651.0
margin_bottom = 288.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP7_DUNGEON_DJINNMENU_EXPBOOST_NAME"

[node name="ExpScalingList" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="7" instance=ExtResource( 12 )]
margin_left = 667.0
margin_top = 228.0
margin_right = 967.0
margin_bottom = 288.0
values = [ 0.75, 1.0, 1.25, 1.5 ]
value_labels = [ "AP7_DUNGEON_DJINNMENU_EXPBOOST_1", "AP7_DUNGEON_DJINNMENU_EXPBOOST_2", "AP7_DUNGEON_DJINNMENU_EXPBOOST_3", "AP7_DUNGEON_DJINNMENU_EXPBOOST_4" ]

[node name="WildEnemiesLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="8"]
margin_top = 304.0
margin_right = 651.0
margin_bottom = 364.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP7_DUNGEON_DJINNMENU_ENEMIES_NAME"

[node name="WildEnemiesList" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="9" instance=ExtResource( 12 )]
margin_left = 667.0
margin_top = 304.0
margin_right = 967.0
margin_bottom = 364.0
values = [ false, true ]
value_labels = [ "AP7_DUNGEON_DJINNMENU_ENEMIES1", "AP7_DUNGEON_DJINNMENU_ENEMIES2" ]

[node name="SeedLabel" type="Label" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="10"]
margin_top = 380.0
margin_right = 651.0
margin_bottom = 440.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AP7_DUNGEON_DJINNMENU_SEED_NAME"

[node name="SeedInput" type="LineEdit" parent="Scroller/OverscanMarginContainer/MarginContainer/Vbox/MainInfoContainer/VBoxContainer/Inputs" index="11"]
margin_left = 667.0
margin_top = 380.0
margin_right = 967.0
margin_bottom = 440.0
rect_min_size = Vector2( 300, 0 )
hint_tooltip = "UI_CC_LABEL_NAME"
text = "0123456789"
max_length = 10
context_menu_enabled = false
virtual_keyboard_enabled = false
script = ExtResource( 9 )

[node name="FullWidthButtonPanel" parent="." index="3" instance=ExtResource( 6 )]

[node name="ResetButton" type="Button" parent="FullWidthButtonPanel/HBoxContainer" index="0"]
margin_right = 450.0
margin_bottom = 52.0
size_flags_vertical = 8
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "UI_SETTINGS_DEFAULTS_BUTTON"
flat = true
align = 0
expand_icon = true
script = ExtResource( 4 )
action = "ui_action_1"
hide_if_disabled = true

[node name="Control" type="Control" parent="FullWidthButtonPanel/HBoxContainer" index="1"]
margin_left = 514.0
margin_right = 871.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="FullWidthButtonPanel/HBoxContainer" index="2"]
margin_left = 935.0
margin_right = 1415.0
margin_bottom = 52.0
size_flags_vertical = 8
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "AP7_DUNGEON_DJINNMENU_START"
flat = true
align = 0
expand_icon = true
script = ExtResource( 4 )
action = "ui_save"
hide_if_disabled = true

[node name="CancelButton" type="Button" parent="FullWidthButtonPanel/HBoxContainer" index="3"]
margin_left = 1479.0
margin_right = 1752.0
margin_bottom = 52.0
size_flags_vertical = 8
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "UI_BUTTON_CANCEL"
flat = true
align = 0
expand_icon = true
script = ExtResource( 4 )
action = "ui_cancel"
hide_if_disabled = true

[connection signal="pressed" from="FullWidthButtonPanel/HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="FullWidthButtonPanel/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]

[editable path="FullWidthButtonPanel"]
